# windows-ar-plugin

./: .gitignore  .vsconfig  CMakeLists.txt  LICENSE  README.md
Project1/: Project1.vcxproj  Project1.vcxproj.filters  calibrate_camera.cpp  calibrate_camera.h  cpp.hint  detect_markers.cpp  detect_markers.h  estimate_pose.cpp  estimate_pose.h  marshalling_API.cpp  marshalling_API.h  platform.h  utilities.cpp  utilities.h
